# backend/internal/api/http/v1/auth/routes.go
@@ -3,5 +3,9 @@ package auth
 import "github.com/gin-gonic/gin"
 
 func RegisterRoutes(engine *gin.Engine, handler *Handler) {
-	engine.POST("/register", handler.RegisterHandler)
+	router := engine.Group("/auth")
+	{
+		router.POST("/register", handler.Register)
+		router.POST("/refresh", handler.Refresh)
+	}
 }
